--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 
 #display{
-    font-size: 32px;
+    font-size: 170%;
     height: 55px;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
     border: none;
